# bookshelf-app

./: .gitignore  .plan  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml  start.sh
backend/: Cargo.toml
backend/migrations/: 20240101000000_init.sql
backend/src/: db.rs  errors.rs  lib.rs  main.rs
backend/src/routes/: authors.rs  books.rs
backend/tests/: api.rs
frontend/: Cargo.toml  Trunk.toml  index.html  style.css
frontend/src/: api.rs  app.rs  main.rs  toast.rs
frontend/src/pages/: author_detail.rs  author_form.rs  authors.rs  book_detail.rs  book_form.rs  home.rs  mod.rs  not_found.rs  stats.rs
types/: Cargo.toml
types/src/: lib.rs
